--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -53,7 +53,8 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/name"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/frameImg">
@@ -77,7 +78,8 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/email"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tilName">
