--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,7 +75,8 @@
                     android:layout_marginHorizontal="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:hint="@string/email"
-                    android:theme="@style/TextLabel">
+                    app:boxStrokeColor="@color/input_selector"
+                    app:boxStrokeWidth="0.6dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etEmail"
@@ -98,7 +99,8 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:hint="@string/password"
-                    android:theme="@style/TextLabel">
+                    app:boxStrokeColor="@color/input_selector"
+                    app:boxStrokeWidth="0.6dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edPwd"
