--- a/app/src/main/res/layout/dialog_filters.xml
+++ b/app/src/main/res/layout/dialog_filters.xml
@@ -75,7 +75,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/select_state"
-                    android:textColorHint="@color/text_gray"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.7dp">
 
@@ -117,7 +116,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/select_city"
-                    android:textColorHint="@color/text_gray"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.7dp">
 
@@ -152,7 +150,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:hint="@string/pin_code"
-                android:theme="@style/TextLabel">
+                app:boxStrokeColor="@color/input_selector"
+                app:boxStrokeWidth="0.6dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edPinCode"
@@ -182,7 +181,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/highway_number"
-                    android:textColorHint="@color/text_gray"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.7dp">
 
