--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -30,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:hint="@string/landmark"
-                android:theme="@style/TextLabel">
+                app:boxStrokeColor="@color/input_selector"
+                app:boxStrokeWidth="0.6dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edLandmark"
@@ -51,7 +52,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:hint="@string/area"
-                android:theme="@style/TextLabel">
+                app:boxStrokeColor="@color/input_selector"
+                app:boxStrokeWidth="0.6dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edArea"
@@ -77,7 +79,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/highway_number"
-                    android:textColorHint="@color/text_gray"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.7dp">
 
@@ -116,7 +117,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/select_state"
-                    android:textColorHint="@color/text_gray"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.7dp">
 
@@ -155,7 +155,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/select_city"
-                    android:textColorHint="@color/text_gray"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.7dp">
 
@@ -189,7 +188,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:hint="@string/pin_code"
-                android:theme="@style/TextLabel">
+                app:boxStrokeColor="@color/input_selector"
+                app:boxStrokeWidth="0.6dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edPinCode"
