--- a/app/src/main/res/layout/layout_other_amenities.xml
+++ b/app/src/main/res/layout/layout_other_amenities.xml
@@ -47,7 +47,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/name"
             android:layout_marginTop="@dimen/_10sdp"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/onboardedByText">
@@ -69,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/onboarding_date"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +115,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:hint="@string/name"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +139,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:hint="@string/phone_number"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +164,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/area_head"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +210,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -228,7 +234,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/phone_number"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -250,7 +257,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:hint="@string/head"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -296,7 +304,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bank"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -319,7 +328,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/gst_number"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -343,7 +353,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/ifsc_code"
             android:layout_marginTop="@dimen/_10sdp"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gstNumberTil">
@@ -366,7 +377,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/account_holder_name"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -389,7 +401,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/pan_number"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -502,7 +515,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/choose_months"
             android:layout_marginTop="@dimen/_10sdp"
-            android:theme="@style/TextLabel"
+            app:boxStrokeColor="@color/input_selector"
+            app:boxStrokeWidth="0.6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/blockingSystemLayout">
