--- a/app/src/main/res/color/btn_text_color_newtheme.xml
+++ b/app/src/main/res/color/btn_text_color_newtheme.xml
@@ -8,7 +8,7 @@
     <item android:color="#000000" android:state_enabled="true" />
 
     <!-- Unfocused and pressed -->
-    <item android:color="#E89E9E" android:state_enabled="false" />
+    <item android:color="#A1E89E9E" android:state_enabled="false" />
 
     <!-- Default color -->
     <item android:color="#000000" />
