--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -81,10 +81,11 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etEmail"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:background="@android:color/transparent"
                             android:fontFamily="@font/opensans_regular"
                             android:inputType="textEmailAddress"
+                            android:translationY="-6dp"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:text="@={vm.emailObservable}"
                             android:textColor="@color/white"
@@ -111,10 +112,11 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/edPwd"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:background="@android:color/transparent"
                             android:fontFamily="@font/opensans_regular"
                             android:inputType="textPassword"
+                            android:translationY="-6dp"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:text="@={vm.passwordObservable}"
                             android:textColor="@color/black"
