--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -119,7 +119,7 @@
                             android:translationY="-6dp"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:text="@={vm.passwordObservable}"
-                            android:textColor="@color/black"
+                            android:textColor="@color/white"
                             android:textSize="16sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
